examples/test/testpolicy932.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy932
  namespace: namespace150
spec:
  podSelector:
    matchLabels:
      key10: value41
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key35: value17
          key23: value26
          key21: value22
      podSelector:
        matchLabels:
          key29: value44
          key20: value44
          key16: value13
